more dropshadow contrast, correct git status colors

--- a/styles/git.less
+++ b/styles/git.less
@@ -1,6 +1,6 @@
 .status          { color: @base-fg; }
-.status-added    { color: @fg-info; }
+.status-added    { color: @fg-added; }
 .status-ignored  { color: @fg-subtle; }
-.status-modified { color: @fg-warning; }
-.status-removed  { color: @fg-error; }
-.status-renamed  { color: @fg-success; }
+.status-modified { color: @fg-modified; }
+.status-removed  { color: @fg-removed; }
+.status-renamed  { color: @fg-renamed; }
