--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -46,7 +46,7 @@ atom-panel.modal {
     border: 1px solid @stroke;
     border-top: 1px solid @stroke;
     border-radius: 0 0 @component-border-radius @component-border-radius;
-    box-shadow: 0 0 1rem @stroke;
+    box-shadow: @shadow;
   }
   // Backdrop
   &:after {
