--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -89,12 +89,12 @@
 @fg-warning: hsl(40,  60%, 60%);
 @fg-error:   hsl(350, 60%, 60%);
 
-@fg-added:    @fg-info;
-@fg-renamed:  @fg-warning;
+@fg-added:    @fg-success;
+@fg-renamed:  @fg-info;
 @fg-modified: @fg-warning;
 @fg-removed:  @fg-error;
 
-
+@shadow: 0 0 2rem rgba(0,0,0,.3);
 
 
 // other required vars
